// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display bubbles 1`] = `
<Bubble
  key="0"
  r={45}
  scale={1}
  x={33.21428571428572}
  y={70.07936507936508}
>
  <Tooltip>
    <g>
      <circle
        className="bubble-chart-bubble"
        r={45}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(33.21428571428572, 70.07936507936508) scale(1)"
      />
    </g>
  </Tooltip>
</Bubble>
`;

exports[`should display bubbles 2`] = `
<Bubble
  key="1"
  r={33.57142857142857}
  scale={1}
  x={66.42857142857144}
  y={33.57142857142857}
>
  <Tooltip>
    <g>
      <circle
        className="bubble-chart-bubble"
        r={33.57142857142857}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(66.42857142857144, 33.57142857142857) scale(1)"
      />
    </g>
  </Tooltip>
</Bubble>
`;

exports[`should render bubble links 1`] = `
<Bubble
  key="0"
  link="foo"
  r={45}
  scale={1}
  x={33.21428571428572}
  y={70.07936507936508}
>
  <Tooltip>
    <g>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="foo"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <circle
            className="bubble-chart-bubble"
            r={45}
            style={
              Object {
                "fill": undefined,
                "stroke": undefined,
              }
            }
            transform="translate(33.21428571428572, 70.07936507936508) scale(1)"
          />
        </a>
      </Link>
    </g>
  </Tooltip>
</Bubble>
`;

exports[`should render bubble links 2`] = `
<Bubble
  key="1"
  link="bar"
  r={33.57142857142857}
  scale={1}
  x={66.42857142857144}
  y={33.57142857142857}
>
  <Tooltip>
    <g>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="bar"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <circle
            className="bubble-chart-bubble"
            r={33.57142857142857}
            style={
              Object {
                "fill": undefined,
                "stroke": undefined,
              }
            }
            transform="translate(66.42857142857144, 33.57142857142857) scale(1)"
          />
        </a>
      </Link>
    </g>
  </Tooltip>
</Bubble>
`;

exports[`should render bubbles with click handlers 1`] = `
<Bubble
  data="foo"
  key="0"
  onClick={[MockFunction]}
  r={45}
  scale={1}
  x={33.21428571428572}
  y={70.07936507936508}
>
  <Tooltip>
    <g>
      <circle
        className="bubble-chart-bubble"
        onClick={[Function]}
        r={45}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(33.21428571428572, 70.07936507936508) scale(1)"
      />
    </g>
  </Tooltip>
</Bubble>
`;

exports[`should render bubbles with click handlers 2`] = `
<Bubble
  data="bar"
  key="1"
  onClick={[MockFunction]}
  r={33.57142857142857}
  scale={1}
  x={66.42857142857144}
  y={33.57142857142857}
>
  <Tooltip>
    <g>
      <circle
        className="bubble-chart-bubble"
        onClick={[Function]}
        r={33.57142857142857}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(66.42857142857144, 33.57142857142857) scale(1)"
      />
    </g>
  </Tooltip>
</Bubble>
`;
